--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -1,4 +1,20 @@
-<h3>Total Results: {{searchResults.total_count}}</h3>
-<p>
-  git-search works!
-</p>
+<!--
+  Not all of the bindings are using the interpolation syntax {{}}
+  - we don't use interpolation when we are binding in a directive.
+-->
+<div *ngIf="searchResults; else elseBlock">
+    <h3>Total Results: {{searchResults.total_count}}</h3>
+    <ul>
+        <li *ngFor="let result of searchResults.items">
+          <a [href]="result.html_url"> 
+            <img [src]="result.owner.avatar_url"/>
+            <h4>{{result.name}}
+              <small> by {{result.owner.login}}</small>
+      
+            </h4>
+          </a>
+          <p>{{result.description}}</p>
+        </li>
+      </ul>
+</div>
+<ng-template #elseBlock>Loading...</ng-template>
