--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,11 @@
 <p>
   home-page works!
 </p>
+<h1>
+    Welcome to the Angular Fundamentals Git Search!
+</h1>
+<nav>
+  <a routerLink="/search" routerLinkActive="active">
+    <button>Search for repositories</button>
+  </a>
+</nav>
