--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -2,9 +2,9 @@
   Not all of the bindings are using the interpolation syntax {{}}
   - we don't use interpolation when we are binding in a directive.
 -->
-<h3>{{title}}</h3>
+<h3>{{title}} - {{displayQuery}}</h3>
 <input name="query" placeholder="Enter Search Here" [(ngModel)]="searhQuery" />
-<button (click)="gitSearch()">Submit</button>
+<button (click)="sendQuery()">Submit</button>
 <div *ngIf="searchResults; else elseBlock">
     <h3 class="total">Total Results: {{searchResults.total_count}}</h3>
     <ul class="list">
