--- a/src/app/git-search/git-search.component.html
+++ b/src/app/git-search/git-search.component.html
@@ -3,7 +3,7 @@
   - we don't use interpolation when we are binding in a directive.
 -->
 <h3>{{title}} - {{displayQuery}}</h3>
-<input name="query" placeholder="Enter Search Here" [(ngModel)]="searhQuery" />
+<input name="query" placeholder="Enter Search Here" [(ngModel)]="searchQuery" />
 <button (click)="sendQuery()">Submit</button>
 <div *ngIf="searchResults; else elseBlock">
     <h3 class="total">Total Results: {{searchResults.total_count}}</h3>
